--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
+\usepackage[utf8]{vietnam}
 
 \title{workspace}
-\author{Hon Nguyen Ti}
+\author{Nguyễn Tí Hon}
 \date{July 2021}
 
 \begin{document}
