Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,10 @@
 \documentclass{article}
 \usepackage[utf8]{vietnam}
+% for chart
+\usepackage{textcomp}
+\usepackage{pgfplots}
+\pgfplotsset{width=13cm,compat=1.9}
+% for chart
 
 \title{workspace}
 \author{Nguyễn Tí Hon}
@@ -10,5 +15,5 @@
 \maketitle
 
 \section{Introduction}
-
+\input{char1}
 \end{document}
